# Scientific-Assignment-2

./: CMakeLists.txt  README.md  main.c  normalizedPowerIteration.c  pageRankCalculator.c  powerIterationWithShift.c  sparseMatrixAddition.c  sparseMatrixVectorMultiplication.c
